--- a/web/src/styles/globals.css
+++ b/web/src/styles/globals.css
@@ -34,6 +34,10 @@ select {
     appearance: none;
 }
 
+input {
+    -webkit-appearance: none;
+}
+
 input[type="date"],
 input[type="time"] {
     -webkit-appearance: none;
