--- a/web/src/styles/globals.css
+++ b/web/src/styles/globals.css
@@ -19,7 +19,7 @@
 }
 
 h1 {
-    @apply text-2xl md:text-5xl lg:text-6xl;
+    @apply text-2xl md:text-4xl lg:text-5xl lg:my-8;
 }
 
 ::-webkit-calendar-picker-indicator {
